...
            "state": "translated",
            "value": "Gắng sức tối đa / gần kiệt. Rất mệt."
          }
        }
      }
    },
    "Me": {
      "localizations": {
        "vi": {
          "stringUnit": {
            "state": "translated",
            "value": "Tôi"
          }
...
            "state": "translated",
            "value": "Chưa xong"
          }
        }
      }
    },
    "Not now": {
      "localizations": {
        "vi": {
          "stringUnit": {
            "state": "translated",
            "value": "Để sau"
          }
...
            "state": "translated",
            "value": "Đăng nhập"
          }
        }
      }
    },
    "Sign out": {
      "localizations": {
        "vi": {
          "stringUnit": {
            "state": "translated",
            "value": "Đăng xuất"
          }
...
